[package]
name = "champions-costume-manager-2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccm"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug-assertions = true

[profile.dev-debug]
inherits = "dev"
opt-level = 0

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.39"
eframe = "0.30.0"
egui_extras = { version = "0.30.0", features = ["file", "image"] }
image = { version = "0.25.5", features = ["jpeg"] }
rfd = "0.15.3"
zune-jpeg = "0.4.14"
